[gd_scene load_steps=15 format=3 uid="uid://btvurdtowism0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xla4c"]
[ext_resource type="AudioStream" uid="uid://cgjnnyb05mbj" path="res://assets/menu_song.mp3" id="2_3kesj"]
[ext_resource type="Texture2D" uid="uid://bb3rhnjhuedr2" path="res://assets/Menu Textures/Play_button.png" id="2_kuxlo"]
[ext_resource type="Texture2D" uid="uid://blwt31rnqjou1" path="res://assets/Menu Textures/play_button_blur.png" id="3_6j2sr"]
[ext_resource type="Texture2D" uid="uid://bem48x0dp1bgc" path="res://assets/Menu Textures/Settings.png" id="4_bvrrq"]
[ext_resource type="Texture2D" uid="uid://cv41fvj6fm67k" path="res://assets/Menu Textures/Settings_blur.png" id="5_pnf71"]
[ext_resource type="Texture2D" uid="uid://s3dp8xglp11x" path="res://assets/Menu Textures/Quit.png" id="6_vcdvj"]
[ext_resource type="Texture2D" uid="uid://dv1marlv4q58" path="res://assets/Menu Textures/how_to_play.png" id="8_eijj5"]
[ext_resource type="Texture2D" uid="uid://bgewo0e0vqgwp" path="res://assets/Menu Textures/How_to_play_blur.png" id="9_2nijq"]
[ext_resource type="FontFile" uid="uid://p63ukbvo7s51" path="res://assets/Fonts/DeterminationSansWebRegular-369X.ttf" id="9_ng0cr"]
[ext_resource type="Texture2D" uid="uid://nqjg1h0iu7wu" path="res://assets/Menu Textures/save.png" id="9_pyybi"]
[ext_resource type="Texture2D" uid="uid://qoiqn0jk4i70" path="res://assets/Menu Textures/save_blur.png" id="10_g4f35"]
[ext_resource type="PackedScene" uid="uid://ca6bwqhpopenf" path="res://scenes/fade_transition.tscn" id="11_0uerq"]
[ext_resource type="PackedScene" uid="uid://dh4m0nkbv01n0" path="res://scenes/Load_data.tscn" id="14_ehsvv"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_xla4c")

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 464.0
offset_top = 248.0
offset_right = 679.0
offset_bottom = 311.0
texture_normal = ExtResource("2_kuxlo")
texture_pressed = ExtResource("3_6j2sr")

[node name="Settings" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 376.0
offset_top = 386.0
offset_right = 788.0
offset_bottom = 440.0
texture_normal = ExtResource("4_bvrrq")
texture_pressed = ExtResource("5_pnf71")

[node name="Quit" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 1086.0
offset_top = 19.0
offset_right = 1136.0
offset_bottom = 72.0
texture_normal = ExtResource("6_vcdvj")

[node name="How_to" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 25.0
offset_top = 21.0
offset_right = 317.0
offset_bottom = 57.0
texture_normal = ExtResource("8_eijj5")
texture_pressed = ExtResource("9_2nijq")

[node name="Save" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 480.0
offset_top = 320.0
offset_right = 654.0
offset_bottom = 366.0
texture_normal = ExtResource("9_pyybi")
texture_pressed = ExtResource("10_g4f35")

[node name="Menu music" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("2_3kesj")
autoplay = true
bus = &"Music"

[node name="fade_transition" parent="." instance=ExtResource("11_0uerq")]
visible = false

[node name="Fade_timer" type="Timer" parent="fade_transition"]

[node name="labels" type="Node2D" parent="."]

[node name="Madeby" type="Label" parent="labels"]
offset_left = 1053.0
offset_top = 630.0
offset_right = 1152.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("9_ng0cr")
theme_override_font_sizes/font_size = 15
text = "made by @lslater"

[node name="Madeby2" type="Label" parent="labels"]
offset_left = 1053.0
offset_top = 630.0
offset_right = 1152.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("9_ng0cr")
theme_override_font_sizes/font_size = 15
text = "made by @lslater"

[node name="High_score" type="Label" parent="labels"]
offset_left = 34.0
offset_top = 63.0
offset_right = 176.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("9_ng0cr")
theme_override_font_sizes/font_size = 30
text = "

"

[node name="load_save" parent="." instance=ExtResource("14_ehsvv")]
visible = false

[connection signal="pressed" from="Button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button_manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_manager/How_to" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="Button_manager/Save" to="." method="_on_save_pressed"]
[connection signal="timeout" from="fade_transition/Fade_timer" to="." method="_on_fade_timer_timeout"]
